[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "simpleitk>=2.5.0",
    "sqlalchemy>=2.0.41",
    "pydicom>=3.0.1",
    "nibabel>=5.3.2",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0.86",
    "werkzeug>=3.1.3",
    "gdcm>=1.1",
    "pylibjpeg>=2.0.1",
    "pylibjpeg-libjpeg>=2.3.0",
]
